--- a/Sol_K4nvasMarket/K4nvas.Market.Shell/App.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Shell/App.xaml
@@ -1,10 +1,7 @@
 ﻿<Application x:Class="K4nvas.Market.Shell.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:K4nvas.Market.Shell" 
-             xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
-             
-             >
+             xmlns:local="clr-namespace:K4nvas.Market.Shell">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
