--- a/Sol_K4nvasMarket/K4nvas.Market.Shell/MainWindow.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Shell/MainWindow.xaml
@@ -1,8 +1,7 @@
-﻿<metro:MetroWindow x:Class="K4nvas.Market.Shell.MainWindow"
+﻿<Window x:Class="K4nvas.Market.Shell.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:K4nvas.Market.Shell"
         mc:Ignorable="d"
@@ -10,4 +9,4 @@
     <Grid>
         
     </Grid>
-</metro:MetroWindow>
+</Window>
