--- a/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/LoginView.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/LoginView.xaml
@@ -44,7 +44,7 @@
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Border Background="#f8f8f8" Grid.Row="1" Grid.RowSpan="5" Grid.ColumnSpan="6" CornerRadius="15,15,0,0" Panel.ZIndex="0" BorderBrush="#7db400" BorderThickness="2"></Border>
+                    <Border Background="#f8f8f8" Grid.Row="1" Grid.RowSpan="5" Grid.ColumnSpan="6" CornerRadius="15,15,0,0"  BorderBrush="{DynamicResource AccentColorBrush}" BorderThickness="2"></Border>
 
                     <Image  Grid.RowSpan="2"  Grid.Column="2" Grid.ColumnSpan="2" VerticalAlignment="top"/>
 
@@ -78,11 +78,11 @@
                     </Button>
 
 
-                    <TextBlock x:Name="lblsd" HorizontalAlignment="Center" Text="Clínica Ricardo Palma" Foreground="White" Grid.ColumnSpan="6" FontSize="40" Margin="0,-95,0,0" FontFamily="Segoe UI"/>
-                    <TextBlock x:Name="lblsd2" HorizontalAlignment="Center" Text="Sistema de Gestión de Administración de Salud" Foreground="White" Grid.ColumnSpan="6" FontSize="20" Margin="0,-35,0,0" FontFamily="Segoe UI"/>
+                    <TextBlock x:Name="lblsd" HorizontalAlignment="Center" Text="MARKET" Foreground="White" Grid.ColumnSpan="6" FontSize="40" Margin="0,-95,0,0" FontFamily="Segoe UI"/>
+                    <!--<TextBlock x:Name="lblsd2" HorizontalAlignment="Center" Text="Sistema de Gestión de Administración de Salud" Foreground="White" Grid.ColumnSpan="6" FontSize="20" Margin="0,-35,0,0" FontFamily="Segoe UI"/>-->
 
                     <Border Background="#ccc" CornerRadius="20" Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="4" Grid.RowSpan="2">
-                        <Border Background="#80ba45" CornerRadius="15" Margin="2">
+                        <Border CornerRadius="15" Margin="2">
                             <Grid Margin="2" Background="Transparent">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
@@ -94,10 +94,10 @@
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
 
-                                <Border Background="Green" Grid.RowSpan="3" CornerRadius="15,0,0,15"></Border>
+                                <Border Background="{DynamicResource AccentColorBrush}" Grid.RowSpan="3" CornerRadius="15,0,0,15"></Border>
 
 
-                                <TextBlock x:Name="lblUsuario" Padding="0,0,10,0"  Foreground="#f2f2f2" Text="Usuario :" FontSize="16" FontFamily="Segoe UI" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+                                <TextBlock x:Name="lblUsuario" Padding="0,0,10,0" Foreground="White" Text="Usuario :" FontSize="16" FontFamily="Segoe UI" VerticalAlignment="Center" HorizontalAlignment="Right"/>
 
                                 <TextBox CharacterCasing="Upper" Margin="10,0" Style="{x:Null}" Background="Transparent" BorderThickness="0" Foreground="#fff" Grid.Column="1" FontFamily="Segoe UI" FontSize="16" AcceptsTab="False" TabIndex="1" Name="txtUser" Text="{Binding Nombres,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  VerticalAlignment="Center">
 
@@ -126,7 +126,7 @@
                     <TextBlock x:Name="ErrorMsg" TextWrapping="Wrap" Text="{Binding Error}"  Foreground="Red" Grid.Column="1" Grid.ColumnSpan="4" Grid.Row="4" FontFamily="Segoe UI" FontSize="13" HorizontalAlignment="Center" Margin="10" />
                     <UniformGrid Grid.Row="1" Columns="2" HorizontalAlignment="Center" VerticalAlignment="Bottom"></UniformGrid>
 
-                    <Border Grid.ColumnSpan="6" Grid.Row="5" CornerRadius="0" Background="#333" BorderBrush="#333" BorderThickness="1" Margin="2" >
+                    <Border Grid.ColumnSpan="6" Grid.Row="5" CornerRadius="0" Background="{DynamicResource AccentColorBrush}" BorderBrush="#333" BorderThickness="1" Margin="2" >
                         <Button x:Name="btnIngresar" FontFamily="Segoe UI" Command="{Binding LoginCommand}" Foreground="White" BorderThickness="0" BorderBrush="Transparent" FontWeight="DemiBold" FontSize="14" Height="auto" Background="Transparent" Click="btnIngresar_Click">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="INGRESAR  "/>
