--- a/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/LoginView.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/LoginView.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:K4nvas.Market.Module.Seguridad.View"
-             mc:Ignorable="d" Loaded="Log_Loaded">
+             mc:Ignorable="d" Loaded="Log_Loaded" 
+             xmlns:Common="clr-namespace:K4nvas.Market.Common.Helpers;assembly=K4nvas.Market.Common">
     <Grid x:Name="MainGrid">
         <Grid.Background>
             <ImageBrush  Stretch="Fill" AlignmentX="Right" AlignmentY="Bottom" ImageSource="/Resources/Images/market.jpg" />
@@ -99,10 +100,10 @@
 
                                 <TextBlock x:Name="lblUsuario" Padding="0,0,10,0" Foreground="White" Text="Usuario :" FontSize="16" FontFamily="Segoe UI" VerticalAlignment="Center" HorizontalAlignment="Right"/>
 
-                                <TextBox CharacterCasing="Upper" Margin="10,0" Style="{x:Null}" Background="Transparent" BorderThickness="0" Foreground="#fff" Grid.Column="1" FontFamily="Segoe UI" FontSize="16" AcceptsTab="False" TabIndex="1" Name="txtUser" Text="{Binding Nombres,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  VerticalAlignment="Center">
+                                <TextBox CharacterCasing="Upper" Margin="10,0" Style="{x:Null}" Background="Transparent" BorderThickness="0" Foreground="#fff" Grid.Column="1" FontFamily="Segoe UI" FontSize="16" AcceptsTab="False" TabIndex="1" x:Name="txt_Usuario" Text="{Binding Usuario,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"  VerticalAlignment="Center">
 
                                     <TextBox.InputBindings>
-                                        <KeyBinding Key="Enter" Command="{Binding LoginCommand}" />
+                                        <KeyBinding Key="Enter" Command="{Binding CommandLogin, UpdateSourceTrigger=PropertyChanged}" />
                                     </TextBox.InputBindings>
 
                                 </TextBox>
@@ -114,9 +115,10 @@
                                 <Separator Grid.ColumnSpan="2" Grid.Row="1" Background="#ccc" />
 
                                 <TextBlock x:Name="lblPassword"  Padding="0,0,10,0"  HorizontalAlignment="Right" Foreground="White"   Text="Contraseña :" Grid.Row="2" FontFamily="Segoe UI" FontSize="15" VerticalAlignment="Center" />
-                                <PasswordBox Style="{x:Null}" Foreground="#f2f2f2"  Margin="10,0" FontFamily="Segoe UI"  FontSize="20" x:Name="Clave" VerticalAlignment="Center" Height="25"  BorderBrush="Transparent" BorderThickness="0" Grid.Column="1" Grid.Row="2" Background="Transparent" TabIndex="2">
+                                <PasswordBox Style="{x:Null}" Foreground="#f2f2f2"  Margin="10,0" FontFamily="Segoe UI" FontSize="20" VerticalAlignment="Center" Height="25"  BorderBrush="Transparent" BorderThickness="0" Grid.Column="1" Grid.Row="2" Background="Transparent" TabIndex="2"
+                                             Common:PasswordBoxAssistant.BindPassword="true" Common:PasswordBoxAssistant.BoundPassword="{Binding Path=Contrasenia, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                                     <PasswordBox.InputBindings>
-                                        <KeyBinding Key="Enter" Command="{Binding LoginCommand}" />
+                                        <KeyBinding Key="Enter" Command="{Binding CommandLogin, UpdateSourceTrigger=PropertyChanged}" />
                                     </PasswordBox.InputBindings>
                                 </PasswordBox>
                             </Grid>
@@ -127,7 +129,7 @@
                     <UniformGrid Grid.Row="1" Columns="2" HorizontalAlignment="Center" VerticalAlignment="Bottom"></UniformGrid>
 
                     <Border Grid.ColumnSpan="6" Grid.Row="5" CornerRadius="0" Background="{DynamicResource AccentColorBrush}" BorderBrush="#333" BorderThickness="1" Margin="2" >
-                        <Button x:Name="btnIngresar" FontFamily="Segoe UI" Command="{Binding LoginCommand}" Foreground="White" BorderThickness="0" BorderBrush="Transparent" FontWeight="DemiBold" FontSize="14" Height="auto" Background="Transparent" Click="btnIngresar_Click">
+                        <Button x:Name="btnIngresar" FontFamily="Segoe UI" Command="{Binding CommandLogin, UpdateSourceTrigger=PropertyChanged}" Foreground="White" BorderThickness="0" BorderBrush="Transparent" FontWeight="DemiBold" FontSize="14" Height="auto" Background="Transparent">
                             <StackPanel Orientation="Horizontal">
                                 <TextBlock Text="INGRESAR  "/>
                                 <Rectangle Width="15" Height="15" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
