--- a/Sol_K4nvasMarket/K4nvas.Market.Shell/App.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Shell/App.xaml
@@ -9,7 +9,7 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-
+                <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Office2013/Generic.xaml" />
                 <!--Icons-->
                 <ResourceDictionary Source="pack://application:,,,/K4nvas.Market.Shell;component/Resources/Icons.xaml" />
 
