--- a/Sol_K4nvasMarket/K4nvas.Market.Shell/View/ShellView.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Shell/View/ShellView.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:K4nvas.Market.Shell.View"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"  
+             xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent"
              Icon="/K4nvas.Market.Shell;component/Resources/Icons/Small Business_48px.png"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:metro="clr-namespace:MahApps.Metro;assembly=MahApps.Metro" 
