--- a/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/HomeView.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/HomeView.xaml
@@ -4,9 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:K4nvas.Market.Module.Seguridad.View"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Background="Orange">
-            
+             mc:Ignorable="d">
+    <Grid>
+        <Grid.Background>
+            <ImageBrush  Stretch="Fill" AlignmentX="Right" AlignmentY="Bottom" ImageSource="/Resources/Images/Market.jpg" />
+        </Grid.Background>
     </Grid>
 </UserControl>
