--- a/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/RibbonCajeroView.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Module.Seguridad/View/RibbonCajeroView.xaml
@@ -1,12 +1,16 @@
-﻿<UserControl x:Class="K4nvas.Market.Module.Seguridad.View.RibbonCajeroView"
+﻿<fluent:Ribbon x:Class="K4nvas.Market.Module.Seguridad.View.RibbonCajeroView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:K4nvas.Market.Module.Seguridad.View"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
-    </Grid>
-</UserControl>
+              xmlns:fluent="clr-namespace:Fluent;assembly=Fluent" >
+    <fluent:RibbonTabItem Header="Caja">
+        <fluent:RibbonGroupBox Header="">
+            <fluent:Button Header="Caja "  LargeIcon="\Resources\Images\Shopping Cart_40px.png" Command="{Binding CommandCaja, UpdateSourceTrigger=PropertyChanged}" Height="76" />
+            <fluent:Button Header="Productos "  LargeIcon="\Resources\Images\Cardboard Box_48px.png" Command="{Binding CommandProducto, UpdateSourceTrigger=PropertyChanged}" Height="76" />
+            <fluent:Button Header="Reporte  "  LargeIcon="\Resources\Images\Statistics_48px.png" Command="{Binding CommandReporte, UpdateSourceTrigger=PropertyChanged}" Height="76" />
+        </fluent:RibbonGroupBox>
+    </fluent:RibbonTabItem>
+</fluent:Ribbon>
