--- a/Sol_K4nvasMarket/K4nvas.Market.Ventas/View/MantenimientoProductoView.xaml
+++ b/Sol_K4nvasMarket/K4nvas.Market.Ventas/View/MantenimientoProductoView.xaml
@@ -7,15 +7,16 @@
              mc:Ignorable="d" 
              xmlns:Metro="clr-namespace:MahApps.Metro;assembly=MahApps.Metro" 
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro" 
-             IsModal="True" 
+             Background="#AA000000"
              Position="Right" 
+             CloseButtonVisibility="Hidden"
+             Foreground="White"
+             Theme="Adapt"
+             Width="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=Controls:MetroWindow}, Path=ActualWidth, Mode=OneWay}"
              IsOpen="{Binding IsOpenFlyoutMantenimientoProducto}"
              CloseCommand="{Binding CommandCerrarMantenimientoProducto}">
-    <Grid>
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Background="White">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -25,7 +26,7 @@
             <RowDefinition Height="auto"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <StackPanel Background="White" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"  Orientation="Horizontal">
+        <StackPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4"  Orientation="Horizontal">
             <Button Height="40" Width="40" Foreground="{DynamicResource AccentColorBrush}" Style="{DynamicResource MetroCircleButtonStyle}" >
                 <Rectangle Width="15" Height="10" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
                     <Rectangle.OpacityMask>
@@ -33,14 +34,14 @@
                     </Rectangle.OpacityMask>
                 </Rectangle>
             </Button>
-            <TextBlock VerticalAlignment="Center" FontWeight="Bold" Text="MANTENIMIENTO DE PRODUCTOS"/>
+            <TextBlock VerticalAlignment="Center" Foreground="Black" FontWeight="Bold" Text="MANTENIMIENTO DE PRODUCTOS"/>
         </StackPanel>
 
-        <GroupBox Grid.Row="1" Grid.Column="0" Header=": : Nuevo Producto" Width="500" >
+        <GroupBox Grid.Row="1" Grid.Column="0" Header=": : Nuevo Producto" Width="600" >
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="200"/>
                     <ColumnDefinition Width="35"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
@@ -54,30 +55,47 @@
                 </Grid.RowDefinitions>
 
                 <Label Grid.Row="0" Grid.Column="0" Content="Nombre de Producto :"></Label>
-                <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="4"
+                         Controls:TextBoxHelper.Watermark="Nombre del Producto"></TextBox>
 
                 <Label Grid.Row="1" Grid.Column="0" Content="Categoría :"></Label>
                 <ComboBox Grid.Row="1" Grid.Column="1"
-                          Controls:TextBoxHelper.UseFloatingWatermark="True"
+                          ItemsSource="{Binding ListaCategoria, UpdateSourceTrigger=PropertyChanged}"
+                          SelectedItem="{Binding CategoriaSeleccionada, UpdateSourceTrigger=PropertyChanged}"
+                          DisplayMemberPath="Descripcion"
+                          Text="{Binding Path=Despcripcion}"
+                          MaxDropDownHeight="200"
+                          Controls:TextBoxHelper.UseFloatingWatermark="False"
                           Controls:TextBoxHelper.Watermark="Auto-Completado"
                           Style="{DynamicResource VirtualisedMetroComboBox}"
                           IsEditable="True" Margin="2,2,34,2">
                 </ComboBox>
                 <Button Grid.Row="1" Grid.Column="1" Width="30"  HorizontalAlignment="Right">
+                    <StackPanel Orientation="Horizontal">
+                        <Rectangle Width="15" Height="15" Fill="{Binding Path=Foreground, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Button}}}">
+                            <Rectangle.OpacityMask>
+                                <VisualBrush Stretch="Fill" Visual="{DynamicResource appbar_book_list}" />
+                            </Rectangle.OpacityMask>
+                        </Rectangle>
+                    </StackPanel>
                 </Button>
 
                 <Label Grid.Row="1" Grid.Column="3" Content="Medida :"></Label>
-                <TextBox Grid.Row="1" Grid.Column="4"></TextBox>
+                <TextBox Grid.Row="1" Grid.Column="4"
+                         Controls:TextBoxHelper.Watermark="Unidad"></TextBox>
 
                 <Label Grid.Row="2" Grid.Column="0" Content="Precio :"></Label>
-                <TextBox Grid.Row="2" Grid.Column="1"></TextBox>
+                <TextBox Grid.Row="2" Grid.Column="1"
+                         Controls:TextBoxHelper.Watermark="S/.0.00"></TextBox>
 
                 <Label Grid.Row="2" Grid.Column="3" Content="Descuento(%) :"></Label>
-                <TextBox Grid.Row="2" Grid.Column="4"></TextBox>
+                <TextBox Grid.Row="2" Grid.Column="4"
+                         Controls:TextBoxHelper.Watermark="%"></TextBox>
 
                 <Label Grid.Row="3" Grid.Column="0" Content="Descripción :"></Label>
                 <RichTextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="4" 
                              Controls:TextBoxHelper.IsSpellCheckContextMenuEnabled="True" 
+                             Controls:TextBoxHelper.Watermark="Descripción del Producto"
                              IsDocumentEnabled="True"></RichTextBox>
             </Grid>
         </GroupBox>
